0.8.14b
- Fix for YouTube videos from playlists not playing (As well as playlists for a few other sites)

0.8.12b
- Fix issue with mirror pushes failing due to missing PIL on some platforms
- Push handling settings now default to play instantly for media and notification for all others

0.8.10b
- Fix issue causing the service not to connect to the push server after authorization
- Push handling settings now default to notification for all push types

0.8.8b
- Fix for error causing service startup to fail

0.8.6b
- Fix for pushes sent when Kodi is off all being played when push is received
- Added setting 'Interrupt Playing Media' (Default: False)
- Will now reconnect on disconnection from push server

0.8.4b
- Fix for pushes playing last video unstead of pushed video

0.8.2b
- Fix for error preventing authorization

0.8.0b
- Added interface, OAuth and media handling code from service.pusbullet.com (ruuk)
- Added choices for handling different push types - Play/Show|Notify|Ignore

0.6.18b
- Added Proportional notifications timeout in add-on settings

0.6.16b
- Added custom kodi commands (aka kcmd)

0.6.14b
- First release added to the Official Kodi repository
- Added internal Kodi modules (script.module.httplib2 and script.module.six)
- Manage new playback types: "episode", "musicvideo", "channel"

0.6.12b
- Manage pictures view and slideshow as song and movie playback (for Sync/Mirroring in outbound mode)

0.6.10b
- 'View Channels' in add-on settings
- Playback action (Stop, Pause or Next) when push is dismissed on device

0.6.8b
- Auto dismiss notification when playback end (for Sync/Mirroring in outbound mode)

0.6.6b
- Playback pushed link (youtube plugin supported)
- Sync/Mirroring: Send notifications to others devices (outbound mode):
- Media info playback (song and movie info with their thumbs!)
- Added to settings "Send a test notification" button
- Added support for Pushbullet Channels

0.6.0b
- Hello Pushbullet :)