@@ -1,5 +1,6 @@
 0.8.14b
 - Fix for YouTube videos from playlists not playing (As well as playlists for a few other sites)
+- Fix the number of caller, in android stock is in the notification title (https://github.com/elbowz/xbmc.service.pushbullet/issues/18)
 
 0.8.12b
 - Fix issue with mirror pushes failing due to missing PIL on some platforms
